# spotfitlm

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
c_src/: gfit.c  gfit.h  glm_core.c  glm_core.h  matrix_operations.c  matrix_operations.h  objective_funcs.c  objective_funcs.h  user_funcs.c  user_funcs.h
c_src/tests/: cholesky_solve_test.c  cholesky_test  cholesky_test.c  dsyev_test.c  dsyev_test_lapack.c  func_fit_test  func_fit_test.c  matinv_test.c  test_mat_ops.c  test_opt_funcs.c  test_user_funcs.c
notebooks/: _glm.py  analytical_expression_sympy.ipynb  expression_output_with_jax.ipynb  general_levenberg_marquardt_01.ipynb  inverse_with_eigendecomp.ipynb  matrix_operation_test_cases.ipynb  mol01_13x13.tif  test_python_wrapper.ipynb
spotfitlm/: __init__.py  fitters.py  libloader.py  utils.py
