[metadata]
name = spotfitlm
version = 0.1.2b
author = Daniel Elnatan
description = MLE 2D gaussian fitting with Poisson deviates
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
packages = find:
install_requires =
    numpy
    pandas
    scipy
    tqdm
python_requires = >=3.8

[options.package_data]
spotfitlm = *.so, *.dll  # Include compiled shared objects or dynamic libraries
